--- a/screen-cast/screen-cast.csproj
+++ b/screen-cast/screen-cast.csproj
@@ -84,6 +84,14 @@
       <Project>{03a086e5-7bfb-4572-af0f-ae46bbdeada6}</Project>
       <Name>PacketHelper</Name>
     </ProjectReference>
+    <ProjectReference Include="..\UDPBroadCastServer\Server.csproj">
+      <Project>{402b15e7-92b3-4aa3-b603-3dee88cfd26c}</Project>
+      <Name>Server</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UDPCommand\GlobalValues.csproj">
+      <Project>{13059492-e9fd-46f4-9817-5c3e1e0979ca}</Project>
+      <Name>GlobalValues</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
